# neurostatsmodels

./: .gitignore  PROJECTS.md  README.md  main.py  pyproject.toml
data/forebrain-data-from-roland/: frequencies.npy  itds.npy  responses_fieldl.npy  responses_rotundus.npy  unitnames_fieldl.npy  unitnames_rotundus.npy
neurostatsmodels/: __init__.py  adexlif.py  decomposition.py  integration.py  plotting.py  populations.py
notebooks/: auditory.ipynb  auditory_coincidence.ipynb  forebrain_analysis.ipynb  itd_information.ipynb  itd_information_updated.ipynb  pynapple_examples.ipynb  spine_integration_exploration.ipynb
package_references/: PYNAPPLE_REF.md
scripts/: optimize_mle.py  print_test.py
