[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurostatsmodels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["neurostatsmodels*"]
exclude = ["notebooks*"]
